--- a/contact.html
+++ b/contact.html
@@ -176,6 +176,8 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-4 col-sm-4">
                         <div class="copyright">
                             <span>Copyright &copy; 2024 <a href="#">Dien Khanh Travel</a></span>
+                            <br>
+                            <span>CÔNG TY TNHH THƯƠNG MẠI DỊCH VỤ VÀ DU LỊCH DIÊN KHÁNH - Mã số doanh nghiệp: 4202003804</span>
                         </div>
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-4 col-sm-4">
