--- a/index.html
+++ b/index.html
@@ -149,79 +149,22 @@ http://www.templatemo.com/tm-409-travel
                                     <p>Zalo: <a href="https://zalo.me/0339001817" target="_blank">0339 001 817</a></p>
                                 </div> <!-- /.service-content -->
                             </div> <!-- /.service-item -->
+                            <div class="service-item">
+                                <div class="service-icon">
+                                    <i class="fa fa-building"></i>
+                                </div> <!-- /.service-icon -->
+                                <div class="service-content">
+                                    <h4>Phòng vé Diên Khánh</h4>
+                                    <p>Địa chỉ: Kilomet 8, đường 23/10, xã Diên An, huyện Diên Khánh</p>
+                                    <p>Tel: 0905 298 448</p>
+                                    <p>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></p>
+                                </div> <!-- /.service-content -->
+                            </div> <!-- /.service-item -->
                         </div> <!-- /.widget-item -->
                     </div> <!-- /.col-md-4 -->
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
         </div> <!-- /.middle-content -->
-
-
-
-        <div class="go-act hidden">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="first-map"></div>
-                    </div> <!-- /.col-md-4 -->
-                    <div class="col-md-8">
-                        <div class="act-btn">
-                            <div class="inner">
-                                <div class="price">
-                                    $5,600
-                                </div> <!-- /.price -->
-                                <div class="title">
-                                    <h2>Europa Tour</h2>
-                                    <span>Belgium, Austria, Poland, France, England</span>
-                                </div>
-                            </div> <!-- /.inner -->
-                            <a href="#" class="link">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
-                        </div> <!-- /.act-btn -->
-                    </div> <!-- /.col-md-8 -->
-                </div> <!-- /.row -->
-            </div> <!-- /.container -->
-        </div> <!-- /.go-act -->
-
-
-
-        <div class="ticket-list" hidden>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="ticket-item">
-                            <h4><a href="#">Airlines</a></h4>
-                            <p>Travel HTML Template is provided by <span class="blue">template</span><span class="green">mo</span>. Download, modify and use this layout for your travel or tour websites.<br><br> Aliquam justo lectus, fermentum vitae libero sollicitudin, tincidunt accumsan magna.Vestibulum congue lorem odio, at sodales nisi luctus quis.</p>
-                            <a href="#" class="ticket-btn">Buy a ticket</a>
-                        </div> <!-- /.ticket-item -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="ticket-item">
-                            <h4><a href="#">Best Cities</a></h4>
-                            <p>Donec sit amet metus in quam consectetur posuere. Mauris scelerisque tortor sit amet porta lacinia. Suspendisse sit amet nisi volutpat, placerat.<br><br>Vestibulum congue lorem odio, at sodales nisi luctus quis. Suspendisse suscipit ligula libero, id consectetur magna.</p>
-                            <a href="#" class="ticket-btn">Explore Cities</a>
-                        </div> <!-- /.ticket-item -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="ticket-item">
-                            <h4><a href="#">Travel Guides</a></h4>
-                            <p>Suspendisse id felis ac orci dignissim efficitur non eget elit. Maecenas lacinia sodales aliquet. Maecenas consequat orci et neque convallis volutpat.<br><br> Integer viverra erat nisi, sed faucibus velit ultricies facilisis. Nam eu felis ac ex fermentum scelerisque.</p>
-                            <a href="#" class="ticket-btn">Details</a>
-                        </div> <!-- /.ticket-item -->
-                    </div> <!-- /.col-md-3 -->
-                    <div class="col-md-3 col-sm-6">
-                        <div class="ticket-item">
-                            <h4><a href="#">Special Events</a></h4>
-                            <p>Aliquam ultricies eros commodo, scelerisque lorem sit amet, mollis odio. Ut malesuada sapien sit amet risus lobortis bibendum. Pellentesque eu ante augue.<br><br>Mauris vel tincidunt purus. Aenean laoreet ornare purus. Nunc condimentum augue sed massa iaculis, vel blandit.</p>
-                            <a href="#" class="ticket-btn">Check a calendar</a>
-                        </div> <!-- /.ticket-item -->
-                    </div> <!-- /.col-md-3 -->
-                </div> <!-- /.row -->
-            </div> <!-- /.container -->
-        </div> <!-- /.ticket-list -->
-
-
-
 
         <div class="partner-list">
             <div class="container">
@@ -265,16 +208,18 @@ http://www.templatemo.com/tm-409-travel
         <div class="site-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-3 col-sm-4">
                         <div class="footer-logo">
                             <a href="index.html">
                                 <img src="images/logo.png" alt="">
                             </a>
                         </div>
                     </div> <!-- /.col-md-4 -->
-                    <div class="col-md-4 col-sm-4">
+                    <div class="col-md-5 col-sm-4">
                         <div class="copyright">
                             <span>Copyright &copy; 2024 <a href="#">Dien Khanh Travel</a></span>
+                            <br>
+                            <span>CÔNG TY TNHH THƯƠNG MẠI DỊCH VỤ VÀ DU LỊCH DIÊN KHÁNH - Mã số doanh nghiệp: 4202003804</span>
                         </div>
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-4 col-sm-4">
