--- a/events.html
+++ b/events.html
@@ -248,7 +248,9 @@ http://www.templatemo.com/tm-409-travel
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-4 col-sm-4">
                         <div class="copyright">
-                            <span>Copyright &copy; 2014 <a href="#">Company Name</a></span>
+                            <span>Copyright &copy; 2024 <a href="#">Dien Khanh Travel</a></span>
+                            <br>
+                            <span>CÔNG TY TNHH THƯƠNG MẠI DỊCH VỤ VÀ DU LỊCH DIÊN KHÁNH - Mã số doanh nghiệp: 4202003804</span>
                         </div>
                     </div> <!-- /.col-md-4 -->
                     <div class="col-md-4 col-sm-4">
