--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-5 col-sm-10 col-xs-10">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="images/logo3.jpg" alt="Dien Khanh Travel" title="Dien Khanh Travel">
+                                    <img src="images/logo.png" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
