--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-5 col-sm-10 col-xs-10">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="images/logo.png" alt="Dien Khanh Travel" title="Dien Khanh Travel">
+                                    <img src="images/logo.png?1" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
@@ -166,7 +166,7 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-4 col-sm-4">
                         <div class="footer-logo">
                             <a href="index.html">
-                                <img src="images/logo.png" alt="">
+                                <img src="images/logo.png?1" alt="">
                             </a>
                         </div>
                     </div> <!-- /.col-md-4 -->
