--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css?3">
+        <link rel="stylesheet" href="css/templatemo_style.css?4">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -35,7 +35,7 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-5 col-sm-10 col-xs-10">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="images/logo.png?1" alt="Dien Khanh Travel" title="Dien Khanh Travel">
+                                    <img src="images/logo.png?1" class="logo-thumb" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
@@ -166,7 +166,7 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-4 col-sm-4">
                         <div class="footer-logo">
                             <a href="index.html">
-                                <img src="images/logo.png?1" alt="">
+                                <img src="images/logo.png?1" class="logo-thumb" alt="">
                             </a>
                         </div>
                     </div> <!-- /.col-md-4 -->
