--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
-        <meta name="description" content="">
+        <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
 <!--
 Travel Template
 http://www.templatemo.com/tm-409-travel
@@ -90,7 +90,7 @@ http://www.templatemo.com/tm-409-travel
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                                 <div class="col-md-6">
-                                    <p>Với bí quyết mua vé máy bay trong khung giờ linh hoạt, các chặng bay nội địa áp dụng có mức giá hấp dẫn.<br>Chỉ từ 1.098.000 VND/chiều cho hạng Phổ thông và từ 1.905.000 VND/chiều cho hạng Thương gia (mức giá chưa bao phí dịch vụ đại lý).<br>Tiết kiệm hơn lên đến 30% giá vé so với mức giá tại thời điểm trưa hoặc chiều.</p>
+                                    <p>Với bí quyết mua vé máy bay trong khung giờ linh hoạt, các chặng bay nội địa áp dụng có mức giá hấp dẫn.<br>Chỉ từ 1.098.000 VND/chiều cho hạng Phổ thông và từ 1.905.000 VND/chiều cho hạng Thương gia (mức giá chưa bao gồm phí dịch vụ đại lý).<br>Tiết kiệm hơn lên đến 30% giá vé so với mức giá tại thời điểm trưa hoặc chiều.</p>
                                 </div>
                             </div>
 
