--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
-        <meta name="description" content="">
+        <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
 <!--
 Travel Template
 http://www.templatemo.com/tm-409-travel
