--- a/tours.html
+++ b/tours.html
@@ -32,14 +32,14 @@ http://www.templatemo.com/tm-409-travel
             <div class="container">
                 <div class="main-header">
                     <div class="row">
-                        <div class="col-md-5 col-sm-10 col-xs-10">
+                        <div class="col-md-4 col-sm-10 col-xs-10">
                             <div class="logo">
                                 <a href="#">
                                     <img src="images/logo.png?1" class="logo-thumb" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
-                        <div class="col-md-7 col-sm-2 col-xs-2">
+                        <div class="col-md-8 col-sm-2 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
                                     <li><a href="index.html">Vé máy bay</a></li>
@@ -140,43 +140,16 @@ http://www.templatemo.com/tm-409-travel
             </div> <!-- /.container -->
         </div> <!-- /.middle-content -->
 
+
         <div class="partner-list">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-2 col-sm-4 col-xs-6">
-                        <div class="partner-item">
-                            <img src="images/partners/partner1.png" alt="">
-                        </div> <!-- /.partner-item -->
-                    </div> <!-- /.col-md-2 -->
-                    <div class="col-md-2 col-sm-4 col-xs-6">
-                        <div class="partner-item">
-                            <img src="images/partners/partner2.png" alt="">
-                        </div> <!-- /.partner-item -->
-                    </div> <!-- /.col-md-2 -->
-                    <div class="col-md-2 col-sm-4 col-xs-6">
-                        <div class="partner-item">
-                            <img src="images/partners/partner3.png" alt="">
-                        </div> <!-- /.partner-item -->
-                    </div> <!-- /.col-md-2 -->
-                    <div class="col-md-2 col-sm-4 col-xs-6">
-                        <div class="partner-item">
-                            <img src="images/partners/partner1.png" alt="">
-                        </div> <!-- /.partner-item -->
-                    </div> <!-- /.col-md-2 -->
-                    <div class="col-md-2 col-sm-4 col-xs-6">
-                        <div class="partner-item">
-                            <img src="images/partners/partner2.png" alt="">
-                        </div> <!-- /.partner-item -->
-                    </div> <!-- /.col-md-2 -->
-                    <div class="col-md-2 col-sm-4 col-xs-6">
-                        <div class="partner-item last">
-                            <img src="images/partners/partner3.png" alt="">
-                        </div> <!-- /.partner-item -->
-                    </div> <!-- /.col-md-2 -->
-                </div> <!-- /.row -->
+                    <div class="col-md-12">
+                        <img src="images/partners/airlines.png" alt="Phòng vé Diên Khánh" style="width: 100%;">
+                    </div>
+                </div>
             </div> <!-- /.container -->
         </div> <!-- /.partner-list -->
-
 
 
         <div class="site-footer">
