--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@ http://www.templatemo.com/tm-409-travel
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
                                     <li><a href="index.html">Vé máy bay</a></li>
+                                    <li class="text-center" style="width: 150px; height: 100px; padding-top: 25px;"><a href="nha-trang.html" style="line-height: 30px;">Vé Vinpearl - Du thuyền</a></li>
                                     <li><a href="tours.html">Tours</a></li>
                                     <li><a href="services.html">Dịch vụ khác</a></li>
                                     <li class="active"><a href="about.html">Giới Thiệu</a></li>
@@ -60,6 +61,7 @@ http://www.templatemo.com/tm-409-travel
                         <div class="menu-responsive">
                             <ul>
                                 <li><a href="index.html">Vé máy bay</a></li>
+                                <li><a href="nha-trang.html" style="line-height: 30px;">Vé Vinpearl - Du thuyền</a></li>
                                 <li><a href="tours.html">Tours</a></li>
                                 <li><a href="services.html">Dịch vụ khác</a></li>
                                 <li class="active"><a href="about.html">Giới Thiệu</a></li>
