--- a/nha-trang.html
+++ b/nha-trang.html
@@ -42,8 +42,8 @@ http://www.templatemo.com/tm-409-travel
                         <div class="col-md-8 col-sm-2 col-xs-2">
                             <div class="main-menu">
                                 <ul class="visible-lg visible-md">
-                                    <li class="active"><a href="index.html">Vé máy bay</a></li>
-                                    <li class="text-center" style="width: 150px; height: 100px; padding-top: 25px;"><a href="nha-trang.html" style="line-height: 30px;">Vé Vinpearl - Du thuyền</a></li>
+                                    <li><a href="index.html">Vé máy bay</a></li>
+                                    <li class="active text-center" style="width: 150px; height: 100px; padding-top: 25px;"><a href="nha-trang.html" style="line-height: 30px;">Vé Vinpearl - Du thuyền</a></li>
                                     <li><a href="tours.html">Tours</a></li>
                                     <li><a href="services.html">Dịch vụ khác</a></li>
                                     <li><a href="about.html">Giới Thiệu</a></li>
@@ -60,8 +60,8 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-12 visible-sm visible-xs">
                         <div class="menu-responsive">
                             <ul>
-                                <li class="active"><a href="index.html">Vé máy bay</a></li>
-                                <li><a href="nha-trang.html" style="line-height: 30px;">Vé Vinpearl - Du thuyền</a></li>
+                                <li><a href="index.html">Vé máy bay</a></li>
+                                <li class="active"><a href="nha-trang.html" style="line-height: 30px;">Vé Vinpearl - Du thuyền</a></li>
                                 <li><a href="tours.html">Tours</a></li>
                                 <li><a href="services.html">Dịch vụ khác</a></li>
                                 <li><a href="about.html">Giới Thiệu</a></li>
@@ -82,57 +82,58 @@ http://www.templatemo.com/tm-409-travel
 
                     <div class="col-md-8">
                         <div class="widget-item">
-                            <h3 class="widget-title">Tin tức - Sự kiện</h3>
+                            <h2 class="widget-title" style="color: #9ed034;">Tại sao nên đặt vé Vinwonders - VinHarbour trước?</h2>
+                            <br>
 
-                            <div class="row news">
-                                <div class="col-md-12"><h4 class="news-title">Vietnam Airlines tiết kiệm hơn khi bay chuyến sáng sớm/tối muộn</h4></div>
+                            <div class="row">
                                 <div class="col-md-6">
                                     <div class="sample-thumb">
-                                        <img src="images/news/bay-dem-1.jpg" alt="">
+                                        <img src="images/services/vinpearl-nhatrang.jpg" alt="vinpearl-nhatrang" style="height: 200px;">
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                                 <div class="col-md-6">
-                                    <p>Với bí quyết mua vé máy bay trong khung giờ linh hoạt, các chặng bay nội địa áp dụng có mức giá hấp dẫn.<br>Chỉ từ 1.098.000 VND/chiều cho hạng Phổ thông và từ 1.905.000 VND/chiều cho hạng Thương gia (mức giá chưa bao gồm phí dịch vụ đại lý).<br>Tiết kiệm hơn lên đến 30% giá vé so với mức giá tại thời điểm trưa hoặc chiều.</p>
+                                    <p style="font-size: 20px;">
+                                        ✓ Đảm bảo có vé<br><br>
+                                        ✓ Không xếp hàng mua vé tại quầy<br><br>
+                                        ✓ Hỗ trợ xuất vé nhanh chóng trong vòng 5 phút
+                                    </p>
                                 </div>
                             </div>
+                        </div> <!-- /.widget-item -->
 
-                            <div class="row news">
-                                <div class="col-md-12"><h4 class="news-title">Bay khắp thế giới với Vietjet Air</h4></div>
-                                <div class="col-md-6">
-                                    <div class="sample-thumb">
-                                        <img src="images/news/bay-khap-the-gioi-vietjet.jpg" alt="">
-                                    </div> <!-- /.sample-thumb -->
-                                </div>
-                                <div class="col-md-6">
-                                    <p>Vietjet Air nay khai thác  với hơn 168 đường bay quốc tế, nhằm phục vụ tối đa như cầu đi lại của quý khách một cách đa dạng và phong phú nhất.</p>
-                                </div>
-                            </div>
+                        <div class="widget-item">
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VINHARBOUR</h2>
+                            <br>
 
-                            <div class="row news">
+                            <div class="row">
                                 <div class="col-md-12">
-                                    <h4 class="news-title">Bay thẳng cùng AIR ASIA</h4>
-                                </div>
-                                <div class="col-md-6">
-                                    <h4 class="news-title">Nha Trang - Kuala Lumpur</h4>
                                     <div class="sample-thumb">
-                                        <img src="images/news/news-1.jpg" alt="">
-                                    </div> <!-- /.sample-thumb -->
-                                </div>
-                                <div class="col-md-6">
-                                    <h4 class="news-title">Nha Trang - Bangkok</h4>
-                                    <div class="sample-thumb">
-                                        <img src="images/news/news-2.jpg" alt="">
+                                        <img src="images/services/bang-gia-vin-harbour.jpg" alt="vinpearl-nhatrang">
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                             </div>
                         </div> <!-- /.widget-item -->
-                    </div> <!-- /.col-md-4 -->
+
+                        <div class="widget-item">
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VINWONDER</h2>
+                            <br>
+
+                            <div class="row news">
+                                <div class="col-md-12">
+                                    <div class="sample-thumb">
+                                        <img src="images/services/bang-gia-vinwonder.png" alt="vinpearl-nhatrang">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                            </div>
+                        </div> <!-- /.widget-item -->
+                    </div> <!-- /.col-md-8 -->
+
                     <div class="col-md-4">
                         <div class="widget-item">
                             <h3 class="widget-title">Liên hệ đặt vé</h3>
                             <div class="service-item">
                                 <div class="service-icon">
-                                    <i class="fa fa-plane"></i>
+                                    <i class="fa fa-ticket"></i>
                                 </div> <!-- /.service-icon -->
                                 <div class="service-content">
                                     <h4>MS. Thảo</h4>
@@ -143,7 +144,7 @@ http://www.templatemo.com/tm-409-travel
                             </div> <!-- /.service-item -->
                             <div class="service-item">
                                 <div class="service-icon">
-                                    <i class="fa fa-plane"></i>
+                                    <i class="fa fa-ticket"></i>
                                 </div> <!-- /.service-icon -->
                                 <div class="service-content">
                                     <h4>MS. Ly</h4>
