--- a/nha-trang.html
+++ b/nha-trang.html
@@ -115,7 +115,7 @@ http://www.templatemo.com/tm-409-travel
                         </div> <!-- /.widget-item -->
 
                         <div class="widget-item">
-                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VINWONDER</h2>
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VINWONDERS</h2>
                             <br>
 
                             <div class="row news">
