--- a/nha-trang.html
+++ b/nha-trang.html
@@ -102,7 +102,7 @@ http://www.templatemo.com/tm-409-travel
                         </div> <!-- /.widget-item -->
 
                         <div class="widget-item">
-                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VINHARBOUR</h2>
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VIN HARBOUR</h2>
                             <br>
 
                             <div class="row">
@@ -115,10 +115,10 @@ http://www.templatemo.com/tm-409-travel
                         </div> <!-- /.widget-item -->
 
                         <div class="widget-item">
-                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VINWONDERS</h2>
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VIN WONDERS</h2>
                             <br>
 
-                            <div class="row news">
+                            <div class="row">
                                 <div class="col-md-12">
                                     <div class="sample-thumb">
                                         <img src="images/services/bang-gia-vinwonder.png" alt="vinpearl-nhatrang">
@@ -126,6 +126,21 @@ http://www.templatemo.com/tm-409-travel
                                 </div>
                             </div>
                         </div> <!-- /.widget-item -->
+
+                        <div class="widget-item">
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ TOUR DU THUYỀN</h2>
+                            <br>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="sample-thumb">
+                                        <img src="images/services/bang-gia-du-thuyen.jpg" alt="vinpearl-nhatrang">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                            </div>
+                        </div> <!-- /.widget-item -->
+
+                        <div><br><br></div>
                     </div> <!-- /.col-md-8 -->
 
                     <div class="col-md-4">
