--- a/nha-trang.html
+++ b/nha-trang.html
@@ -19,7 +19,7 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/templatemo_misc.css">
-        <link rel="stylesheet" href="css/templatemo_style.css?5">
+        <link rel="stylesheet" href="css/templatemo_style.css?6">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
     </head>
@@ -34,7 +34,7 @@ http://www.templatemo.com/tm-409-travel
                     <div class="row">
                         <div class="col-md-4 col-sm-10 col-xs-10">
                             <div class="logo">
-                                <a href="#">
+                                <a href="index.html">
                                     <img src="images/logo.png?1" class="logo-thumb" alt="Dien Khanh Travel" title="Dien Khanh Travel">
                                 </a>
                             </div> <!-- /.logo -->
