google tags manager

--- a/index.html
+++ b/index.html
@@ -22,8 +22,22 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/templatemo_style.css?6">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M3PSTDTZ');</script>
+<!-- End Google Tag Manager -->
+
     </head>
     <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M3PSTDTZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
@@ -136,7 +150,7 @@ http://www.templatemo.com/tm-409-travel
                                 </div> <!-- /.service-icon -->
                                 <div class="service-content">
                                     <h4>MS. Thảo</h4>
-                                    <p>Tel: 0905 298 448 - 0941 964 745</p>
+                                    <p>Tel: <span>0905 298 448</span> - <span>0941 964 745</span></p>
                                     <p>Zalo: <a href="https://zalo.me/0941964745" target="_blank">0941 964 745</a></p>
                                     <p>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></p>
                                 </div> <!-- /.service-content -->
@@ -147,7 +161,7 @@ http://www.templatemo.com/tm-409-travel
                                 </div> <!-- /.service-icon -->
                                 <div class="service-content">
                                     <h4>MS. Ly</h4>
-                                    <p>Tel: 0339 001 817</p>
+                                    <p>Tel: <span>0339 001 817</span></p>
                                     <p>Zalo: <a href="https://zalo.me/0339001817" target="_blank">0339 001 817</a></p>
                                 </div> <!-- /.service-content -->
                             </div> <!-- /.service-item -->
@@ -158,7 +172,7 @@ http://www.templatemo.com/tm-409-travel
                                 <div class="service-content">
                                     <h4>Phòng vé Diên Khánh</h4>
                                     <p>Địa chỉ: Kilomet 8, đường 23/10, xã Diên An, huyện Diên Khánh</p>
-                                    <p>Tel: 0905 298 448</p>
+                                    <p>Tel: <span>0905 298 448</span></p>
                                     <p>Email: <a href="mailto:dailyvedienkhanh@gmail.com">dailyvedienkhanh@gmail.com</a></p>
                                 </div> <!-- /.service-content -->
                             </div> <!-- /.service-item -->
