--- a/events.html
+++ b/events.html
@@ -22,6 +22,16 @@ http://www.templatemo.com/tm-409-travel
         <link rel="stylesheet" href="css/templatemo_style.css?6">
 
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PQTVV6VGFH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PQTVV6VGFH');
+</script>
+
     </head>
     <body>
         <!--[if lt IE 7]>
