--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn</title>
+        <title>Dien Khanh Travel - Vé máy bay</title>
         <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
 <!--
 Travel Template
@@ -95,6 +95,15 @@ http://www.templatemo.com/tm-409-travel
                     <div class="col-md-8">
                         <div class="widget-item">
                             <h3 class="widget-title">Tin tức - Sự kiện</h3>
+
+                            <div class="row news">
+                                <div class="col-md-12"><h4 class="news-title">Vietnam Airlines khai thác trở lại đường bay Nha Trang- Đà Nẵng- Nha Trang</h4></div>
+                                <div class="col-md-12">
+                                    <div class="sample-thumb">
+                                        <img src="images/news/vietnam-airlines-1.jpg" alt="">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                            </div>
 
                             <div class="row news">
                                 <div class="col-md-12"><h4 class="news-title">Vietnam Airlines tiết kiệm hơn khi bay chuyến sáng sớm/tối muộn</h4></div>
