--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@ http://www.templatemo.com/tm-409-travel
 -->
         <meta name="viewport" content="width=device-width">
 		<meta name="author" content="templatemo">
+        <meta property="og:title" content="Dien Khanh Travel - Vé máy bay, vé tàu, vé xe, tour, khách sạn">
+        <meta property="og:image" content="https://dienkhanhtravel.com/images/logo.png">
+
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,300' rel='stylesheet' type='text/css'>
         
         <link rel="stylesheet" href="css/bootstrap.min.css">
