--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Dien Khanh Travel - Vé máy bay</title>
-        <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
+        <title>Đại lý vé Diên Khánh - Vé máy bay</title>
+        <meta name="description" content="Đại lý vé Diên Khánh, Chuyên vé máy bay quốc nội và quốc tế">
 <!--
 Travel Template
 http://www.templatemo.com/tm-409-travel
