--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Dien Khanh Travel - Liên hệ</title>
+        <title>Đại lý vé Diên Khánh - Liên hệ</title>
         <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
 <!-- 
 Travel Template
