--- a/nha-trang.html
+++ b/nha-trang.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Dien Khanh Travel - Vé Vinpearl - Du thuyền</title>
+        <title>Đại lý vé Diên Khánh - Vé Vinpearl - Du thuyền</title>
         <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
 <!--
 Travel Template
