--- a/tours.html
+++ b/tours.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Dien Khanh Travel - Tour, khách sạn</title>
+        <title>Đại lý vé Diên Khánh - Tour, khách sạn</title>
         <meta name="description" content="Chuyên vé máy bay quốc nội và quốc tế">
 <!--
 Travel Template
