--- a/index.html
+++ b/index.html
@@ -100,10 +100,19 @@ http://www.templatemo.com/tm-409-travel
                             <h3 class="widget-title">Tin tức - Sự kiện</h3>
 
                             <div class="row news">
+                                <div class="col-md-12"><h4 class="news-title">BAY THẲNG NHA TRANG ĐẾN BANGKOK, KUALA LUMPUR CHƯA BAO GIỜ RẺ ĐẾN THẾ</h4></div>
+                                <div class="col-md-12">
+                                    <div class="sample-thumb">
+                                        <img src="images/news/air-asia-giam-25.jpg" alt="Air Asia giảm 25% mọi chuyến bay">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                            </div>
+
+                            <div class="row news">
                                 <div class="col-md-12"><h4 class="news-title">Vietnam Airlines khai thác trở lại đường bay Nha Trang- Đà Nẵng- Nha Trang</h4></div>
                                 <div class="col-md-12">
                                     <div class="sample-thumb">
-                                        <img src="images/news/vietnam-airlines-1.jpg" alt="">
+                                        <img src="images/news/vietnam-airlines-1.jpg" alt="Vietnam Airlines khai thác trở lại đường bay Nha Trang- Đà Nẵng- Nha Trang">
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                             </div>
@@ -112,7 +121,7 @@ http://www.templatemo.com/tm-409-travel
                                 <div class="col-md-12"><h4 class="news-title">Vietnam Airlines tiết kiệm hơn khi bay chuyến sáng sớm/tối muộn</h4></div>
                                 <div class="col-md-6">
                                     <div class="sample-thumb">
-                                        <img src="images/news/bay-dem-1.jpg" alt="">
+                                        <img src="images/news/bay-dem-1.jpg" alt="Vietnam Airlines tiết kiệm hơn khi bay chuyến sáng sớm/tối muộn">
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                                 <div class="col-md-6">
