--- a/index.html
+++ b/index.html
@@ -100,19 +100,28 @@ http://www.templatemo.com/tm-409-travel
                             <h3 class="widget-title">Tin tức - Sự kiện</h3>
 
                             <div class="row news">
-                                <div class="col-md-12"><h4 class="news-title">BAY THẲNG NHA TRANG ĐẾN BANGKOK, KUALA LUMPUR CHƯA BAO GIỜ RẺ ĐẾN THẾ</h4></div>
+                                <div class="col-md-12"><h4 class="news-title">MUA VÉ MÁY BAY TẾT ẤT TỴ 2025 CÙNG VIETNAM AIRLINES</h4></div>
                                 <div class="col-md-12">
                                     <div class="sample-thumb">
-                                        <img src="images/news/air-asia-giam-25.jpg" alt="Air Asia giảm 25% mọi chuyến bay">
+                                        <img src="images/news/ve-may-bay-tet.jpg" alt="Vietnam Airlines khai thác trở lại đường bay Nha Trang- Đà Nẵng- Nha Trang">
                                     </div> <!-- /.sample-thumb -->
+                                </div>
+                                <div class="col-md-12">
+                                    <p>Tết luôn là khoảng thời gian cao điểm bay với nhiều lịch trình bận rộn. Chính vì vậy, hãy nhanh tay chuẩn bị sớm cho hành trình Tết 2025 của bạn với Vietnam Airlines dù đó có là kế hoạch đi du lịch, nghỉ dưỡng hay chỉ đơn giản là được trở về nhà, quây quần đón Tết bên người thân và gia đình bạn nhé.<br/><br/></p>
+
+                                    <p>Lịch nghỉ Tết Nguyên Đán 2025<br/>
+                                    Lịch nghỉ Tết Nguyên Đán 2025 kéo dài 9 ngày liên tục từ ngày 25/01 đến 02/02/2025 (tức từ 26 tháng Chạp năm Giáp Thìn đến hết mùng 5 tháng Giêng năm Ất Tỵ). Hãy lên kế hoạch cho chuyến du xuân của bạn ngay từ bây giờ cùng Vietnam Airlines nhé!<br/><br/></p>
+
+                                    <p>Gợi ý hành trình Tết 2025<br/>
+                                    Đáp ứng nhu cầu đi lại dịp Tết Ất Tỵ 2025, VNA Group (gồm 3 hãng Vietnam Airlines, Pacific Airlines và VASCO) mở bán sớm 1,5 triệu ghế trên toàn mạng bay nội địa cho giai đoạn đi lại từ ngày 13/01/2024 đến 12/02/2025 (tức ngày 14 tháng Chạp đến ngày 15 tháng Giêng). Các đường bay cao điểm dịp Tết Nguyên đán 2025 sẽ tập trung giữa 3 thành phố lớn Hà Nội, Đà Nẵng, Tp. Hồ Chí Minh với nhiều tỉnh thành như Hải Phòng, Vinh, Thanh Hóa, Huế, Quy Nhơn, Nha Trang, Pleiku, Đà Lạt, Buôn Ma Thuột, Phú Quốc…</p>
                                 </div>
                             </div>
 
                             <div class="row news">
-                                <div class="col-md-12"><h4 class="news-title">Vietnam Airlines khai thác trở lại đường bay Nha Trang- Đà Nẵng- Nha Trang</h4></div>
+                                <div class="col-md-12"><h4 class="news-title">BAY THẲNG NHA TRANG ĐẾN BANGKOK, KUALA LUMPUR CHƯA BAO GIỜ RẺ ĐẾN THẾ</h4></div>
                                 <div class="col-md-12">
                                     <div class="sample-thumb">
-                                        <img src="images/news/vietnam-airlines-1.jpg" alt="Vietnam Airlines khai thác trở lại đường bay Nha Trang- Đà Nẵng- Nha Trang">
+                                        <img src="images/news/air-asia-giam-25.jpg" alt="Air Asia giảm 25% mọi chuyến bay">
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                             </div>
