--- a/nha-trang.html
+++ b/nha-trang.html
@@ -116,26 +116,13 @@ http://www.templatemo.com/tm-409-travel
                         </div> <!-- /.widget-item -->
 
                         <div class="widget-item">
-                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VIN HARBOUR</h2>
+                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ DỊCH VỤ VÉ VINWONDERS - VINHARBOUR</h2>
                             <br>
 
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="sample-thumb">
-                                        <img src="images/services/bang-gia-vin-harbour.jpg" alt="vinpearl-nhatrang">
-                                    </div> <!-- /.sample-thumb -->
-                                </div>
-                            </div>
-                        </div> <!-- /.widget-item -->
-
-                        <div class="widget-item">
-                            <h2 class="widget-title" style="color: #9ed034;">BẢNG GIÁ VIN WONDERS</h2>
-                            <br>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="sample-thumb">
-                                        <img src="images/services/bang-gia-vinwonder.png" alt="vinpearl-nhatrang">
+                                        <img src="images/services/vin-pearl-price.jpg" alt="vinpearl-nhatrang">
                                     </div> <!-- /.sample-thumb -->
                                 </div>
                             </div>
